OutputTurtle now shows preview
uses TurtleToBufferedImage to generate a scaled image.